# lwm2leq3qarnduba

./: .gitignore  README.md  pyproject.toml
bert/: .gitignore  README.md  predict.py  train.py
bert/lib/: dataset.py  tokenization.py  trainer.py  utils.py
funcs/: .gitignore  README.md  pyproject.toml  requirements.txt
funcs/predict/: lrm.pkl  main.py
lrm/: README.md  predict.py  tfidf_vectorizer.pkl  train.py
